--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,23 @@
+bcrypt==4.1.2
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+dnspython==2.7.0
+email-validator==2.1.0.post1
 Flask==3.1.0
+Flask-Login==0.6.3
 Flask-PyMongo==3.0.1
+Flask-WTF==1.2.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+PyJWT==2.8.0
 pymongo==4.11.1
 python-dotenv==1.0.1
-Flask-Login==0.6.3
-Flask-Mail==0.9.1
-Flask-WTF==1.2.1
-email-validator==2.1.0.post1
-PyJWT==2.8.0
-bcrypt==4.1.2
-Werkzeug>=3.0.0
-gunicorn==21.2.0
+requests==2.31.0
+resend==0.7.2
+urllib3==2.3.0
+Werkzeug==3.1.3
+WTForms==3.2.1
